[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/enemies/bomber/Bomber.gd" type="Script" id=1]
[ext_resource path="res://models/Bomber.tres" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/enemies/bomber/projectiles/BomberProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=4]
radius = 0.0283135
height = 0.124508

[node name="EnemyBomber" type="Area" groups=["enemies"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
projectile = ExtResource( 3 )

[node name="ShipMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="ShipCollision" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="Cooldown" type="Timer" parent="."]

[node name="TripleShotCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Berrel" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.06, 0, 0.07 )

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="TripleShotCooldown" to="." method="_on_TripleShotCooldown_timeout"]
